追加矢魔法と弓の長時間詠唱を1.20.1 Forge向けに補正
Forgeの通信・描画・同期データAPIへ移植し、entity tagを複数形パスで再生成。GameTestの空中配置を通常地形から分離し、パケット捕捉と射程境界のchunk準備を補正。Java 17のbuildとrunGameTestServer（必須1384件）を確認。